# goit-ds-hw-03

task_1/: db_requests.py  main.py  pyproject.toml
task_2/: db.py  main.py  parser.py  pyproject.toml
task_2/files/: authors.json
